--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Xeviant</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.png" />
+  <link rel="apple-touch-icon" href="/src/assets/favicon.png" />
+
+  <!-- Primary Meta Tags (will be overridden by react-helmet) -->
+  <title>Xeviant - IT Solutions & Software Development Services</title>
+  <meta name="title" content="Xeviant - IT Solutions & Software Development Services" />
+  <meta name="description"
+    content="Transforming businesses through innovative technology solutions and exceptional software development services." />
+
+  <!-- Theme Color -->
+  <meta name="theme-color" content="#0a2463" />
+
+  <!-- Preconnect to external domains for performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+  <!-- Performance: DNS Prefetch -->
+  <link rel="dns-prefetch" href="https://api.emailjs.com" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
